--- a/index.html
+++ b/index.html
@@ -2284,7 +2284,7 @@
             <div class=" pt-3 pb-3"id="deve" style="background-color: rgba(0, 0, 0, 0.932);">
               <h5>Developed by:</h5>
               <p><a href="https://www.linkedin.com/in/ankit-raj-416930260" target="_blank" style="position:initial;  color:white;">Ankit Raj  <i class="fa fa-linkedin" aria-hidden="true"></i></a></p>
-              <p><a href="https://www.linkedin.com/in/mohit-kumar-04403929b" target="_blank" style="color:white;">Muskan Vedi <i class="fa fa-linkedin" aria-hidden="true"></i></a></p>
+              <p><a href="https://www.linkedin.com/in/mohit-kumar-04403929b" target="_blank" style="color:white;">Mohit Kumar <i class="fa fa-linkedin" aria-hidden="true"></i></a></p>
               <p><a href="https://www.linkedin.com/in/prince-kumar-364695260" target="_blank" style="color:white;">Prince Kumar <i class="fa fa-linkedin" aria-hidden="true"></i></a></p>
               <p><a href="https://www.linkedin.com/in/shashank-shekhar-3b029024b" target="_blank" style="color:white;">Shashank Shekhar <i class="fa fa-linkedin" aria-hidden="true"></i></a></p>
             </div>
